--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "psr/http-message": "^1.0",
         "psr/container": "^1.0",
-        "psr/log": "^1.0"
+        "psr/log": "^1.0",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.1"
